force-app/main/default/objects/Appointment__c/fields/AppointmentContacts__c.field-meta.xml
<CustomField>
    <fullName>AppointmentContacts__c</fullName>
    <description>Each AppointmentContacts can have multiple Appointments.  This lets Contacts accessing the junction object look at Roll-Up Summaries of all Appointmetns and related Contacts.</description>
    <label>AppointmentContacts</label>
    <referenceTo>AppointmentContacts__c</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>