force-app/main/default/objects/Appointment__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>Space for accepting/rejecting doctor to write comments.</description>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>