force-app/main/default/objects/Appointment__c/fields/DONOTUSE__c.field-meta.xml
<CustomField>
    <fullName>DONOTUSE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DONOTUSE</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>