force-app/main/default/objects/Appointment__c/fields/Institution__c.field-meta.xml
<CustomField>
    <fullName>Institution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Notes appointment&#39;s location. Could be autofilled with the related Contact (Doctor)&#39;s institution.</description>
    <label>Institution</label>
    <referenceTo>Institution__c</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>