force-app/main/default/objects/Appointment__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>Appointment begins on this day at this hour.</description>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>