force-app/main/default/objects/Appointment__c/fields/VSCodeSampleCheckbox__c.field-meta.xml
<CustomField>
    <fullName>VSCodeSampleCheckbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TODO: Delete this</description>
    <label>VSCodeSampleCheckbox</label>
    <type>Checkbox</type>
</CustomField>